[package]
name = "librespot-node"
version = "0.1.0"
authors = ["Nadav Tau <nadavt@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "librespot_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
backtrace = "0.3.9"
neon = "0.2.0"
tokio-core = "0.1"
env_logger = "0.4.0"
log = { version = "^0.4.5", features = ["std"] }
simple_logger = "1.0.1"
simple-logging = "2.0.1"
futures = "0.1.17"
librespot = { path = "./vendor/librespot" }

# [dependencies.librespot]
# git = "https://github.com/librespot-org/librespot.git"